--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -36,24 +36,17 @@ section::after {
   clear: both;
 }
 
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
 /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
 @media (max-width: 768px) {
-  nav, article {
+  nav,
+  article {
     width: 100%;
     height: auto;
   }
 }
 
 @media (min-width: 992px) {
-  .navbar-brand{
+  .navbar-brand {
     display: none;
   }
   article {
@@ -82,4 +75,12 @@ footer {
 
 .dev-icons {
   font-size: 3rem;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+section {
+  min-height: 95vh;
 }
