--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -23,12 +23,12 @@
               src="assets/img/profile.jpeg"
               alt=""
           /></span>
-          <a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link active pointer" aria-current="page" routerLink="." fragment="about">ABOUT</a>
-          <a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link pointer" routerLink="." fragment="experience">EXPERIENCE</a>
-          <a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link pointer" routerLink="." fragment="education">EDUCATION</a>
-          <a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link pointer" routerLink="." fragment="skills">SKILLS</a>
-          <a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link pointer" routerLink="." fragment="interests">INTERESTS</a>
-          <a data-toggle="collapse" data-target=".navbar-collapse.show" class="nav-link pointer" routerLink="." fragment="awards">AWARDS</a>
+          <a class="nav-link active pointer" aria-current="page" routerLink="." fragment="about">ABOUT</a>
+          <a class="nav-link pointer" routerLink="." fragment="experience">EXPERIENCE</a>
+          <a class="nav-link pointer" routerLink="." fragment="education">EDUCATION</a>
+          <a class="nav-link pointer" routerLink="." fragment="skills">SKILLS</a>
+          <a class="nav-link pointer" routerLink="." fragment="interests">INTERESTS</a>
+          <a class="nav-link pointer" routerLink="." fragment="awards">AWARDS</a>
         </div>
       </div>
     </div>
